[gd_scene load_steps=9 format=3 uid="uid://cnm1x8s24vyl6"]

[ext_resource type="Script" uid="uid://bwmphlk5qbq5h" path="res://table.gd" id="1_jd0nb"]
[ext_resource type="Texture2D" uid="uid://ccdip2g522xgv" path="res://art/arrow.png" id="2_v5i0k"]

[sub_resource type="LabelSettings" id="LabelSettings_feb5d"]
font_size = 24
font_color = Color(0, 0, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fc0e3"]
font_size = 24
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7jktm"]
font_size = 24
font_color = Color(0, 0, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ryrav"]
font_size = 24
font_color = Color(1, 0, 0, 1)

[sub_resource type="SystemFont" id="SystemFont_jd0nb"]
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_v5i0k"]
font = SubResource("SystemFont_jd0nb")
font_size = 41

[node name="Table" type="CanvasLayer"]
script = ExtResource("1_jd0nb")

[node name="Label_GameLog" type="Label" parent="."]
offset_left = 905.0
offset_top = 174.0
offset_right = 988.0
offset_bottom = 197.0
text = "Game Log"

[node name="Label_Player" type="Label" parent="."]
offset_left = 899.0
offset_top = 25.0
offset_right = 995.0
offset_bottom = 65.0
text = "Player"
label_settings = SubResource("LabelSettings_feb5d")
horizontal_alignment = 1

[node name="Label_Computer" type="Label" parent="."]
offset_left = 1026.0
offset_top = 25.0
offset_right = 1143.0
offset_bottom = 59.0
text = "Computer"
label_settings = SubResource("LabelSettings_fc0e3")

[node name="Label_ScoreEntry" type="Label" parent="."]
offset_left = 64.0
offset_top = 279.0
offset_right = 241.0
offset_bottom = 311.0
text = "Player point entry"
horizontal_alignment = 1

[node name="Label_ScoreRound" type="Label" parent="."]
visible = false
offset_left = 49.0
offset_top = 278.0
offset_right = 255.0
offset_bottom = 310.0
text = "Round Score for Computer"
horizontal_alignment = 1

[node name="Label_RunningTotal" type="Label" parent="."]
offset_left = 290.0
offset_top = 274.0
offset_right = 467.0
offset_bottom = 306.0
text = "Running Total"
horizontal_alignment = 1

[node name="Score_Player" type="Label" parent="."]
offset_left = 917.0
offset_top = 71.0
offset_right = 980.0
offset_bottom = 105.0
text = "0"
label_settings = SubResource("LabelSettings_7jktm")
horizontal_alignment = 1

[node name="Score_Computer" type="Label" parent="."]
offset_left = 1048.0
offset_top = 70.0
offset_right = 1120.0
offset_bottom = 104.0
text = "0"
label_settings = SubResource("LabelSettings_ryrav")
horizontal_alignment = 1

[node name="Score_Round" type="Label" parent="."]
visible = false
offset_left = 82.0
offset_top = 315.0
offset_right = 219.0
offset_bottom = 372.0
label_settings = SubResource("LabelSettings_v5i0k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score_RunningTotal" type="Label" parent="."]
offset_left = 306.0
offset_top = 309.0
offset_right = 443.0
offset_bottom = 366.0
text = "0"
label_settings = SubResource("LabelSettings_v5i0k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameLog" type="RichTextLabel" parent="."]
offset_left = 905.0
offset_top = 199.0
offset_right = 1149.0
offset_bottom = 643.0

[node name="Button" type="Button" parent="."]
offset_left = 299.0
offset_top = 288.0
offset_right = 457.0
offset_bottom = 332.0
text = "default text"

[node name="NextArrow" type="Sprite2D" parent="."]
position = Vector2(108, 305.75)
scale = Vector2(1.46875, 1.72656)
texture = ExtResource("2_v5i0k")

[node name="ScoreEntry" type="LineEdit" parent="."]
offset_left = 67.0
offset_top = 310.0
offset_right = 170.0
offset_bottom = 360.0
theme_override_font_sizes/font_size = 41
alignment = 1
max_length = 2
emoji_menu_enabled = false

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
